fix: Remove whitespace bug on elements

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,6 @@ body {
     margin: 0;
     padding: 0;
     font-family: Inconsolata;
-    white-space: pre;
     #main-focus {
         position: absolute;
         top: 0;
@@ -71,12 +70,10 @@ body {
     padding: 16px 50px;
     z-index: 100;
     .settings-header-container {
+        margin-bottom: 12px;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        .settings-header-title {
-            margin: 0;
-        }
         #settings-exit-button {
             margin: 0;
             padding: 6px 12px;
@@ -87,14 +84,16 @@ body {
             }
         }
     }
-    .custom-text-heading {
-        margin: 0;
+    .range-input {
+        margin-bottom: 22px;
+        padding: 4px;
+        font-size: 14px;
     }
     #custom-text-area {
         box-sizing: border-box;
         width: 100%;
         padding: 12px;
-        height: 180px;
+        height: 250px;
         font-size: 22px;
         color: #666;
         display: block;
@@ -119,7 +118,6 @@ body {
         }
     }
     #apply-settings-button {
-        margin: 0;
         font-size: 26px;
         color: $accent-color;
         cursor: pointer;
@@ -127,20 +125,21 @@ body {
 }
 
 .typing-info {
-    margin: 0 auto;
+    margin: 100px auto 0;
     width: 80%;
     text-align: right;
-    .info-heading {
-        margin: 0;
-    }
 }
 
 #letters-view {
-    margin: 0 auto;
+    white-space: pre;
+    margin: 40px auto;
     width: 80%;
     font-size: 32px;
     display: flex;
     flex-wrap: wrap;
+    .letter {
+        border-bottom: 2px solid #fff;
+    }
     .highlightCorrect {
         color: blue;
     }
